<resources>
    <string name="app_name">TccPinut</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_create_pinut">CreatePinut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createPinutTitulo">Título</string>
    <string name="createPinutDescricao">Adicione um texto</string>
    <string name="criarPinut">Criar Pinut</string>
    <string name="cancelarPinut">Cancelar</string>
    <string name="txtVPrivacidade">Privacidade:</string>
    <string name="publica">Pública</string>
    <string name="privada">Privada</string>
    <string name="duracaoPin">Duração(Horas)</string>
    <string name="title_activity_mostrar_detalhes_pinut">MostrarDetalhesPinut</string>
    <string name="btFechar">Fechar</string>
</resources>
