<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tcc.tccpinut.tccpinut.CreatePinut"
    tools:showIn="@layout/activity_create_pinut"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/ciarPinutFoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="#00A8EC"
        android:src="@drawable/person"
        android:cropToPadding="false"
        android:scaleType="centerCrop" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtTxtTitulo"
            android:layout_weight="1"
            android:hint="@string/createPinutTitulo" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtTxtTexto"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:hint="@string/createPinutDescricao" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="time"
            android:ems="10"
            android:layout_weight="1"
            android:id="@+id/edtTxtDuracaoHoras"
            android:hint="@string/duracaoPin"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:text="@string/txtVPrivacidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/txtVPrivacidade"/>

        <Switch
            android:text="@string/publica"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switchPrivacidade"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/criarPinut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCriarPinut"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"
            android:layout_gravity="bottom" />

        <Button
            android:text="@string/cancelarPinut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancelarPinut"
            android:layout_weight="1"
            tools:ignore="ButtonStyle"
            android:layout_gravity="bottom" />
    </LinearLayout>

    <Button
        android:text="Gravar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gravar" />

    <Button
        android:text="parar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parar" />

    <Button
        android:text="tocar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tocar" />

</LinearLayout>

</ScrollView>