<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.tcc.tccpinut.tccpinut.MostrarDetalhesPinut"
        tools:showIn="@layout/activity_mostrar_detalhes_pinut"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/ciarPinutFoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:background="#00A8EC"
            android:src="@drawable/person"
            android:cropToPadding="false"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/vTxtTitulo"
                android:layout_weight="1"
                android:hint="@string/createPinutTitulo" />

            <TextView
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/vTxtTexto"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:hint="@string/createPinutDescricao" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="time"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/vTxtDuracaoHoras"
                android:hint="@string/duracaoPin"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="tocar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bttocar"
                android:layout_weight="1" />

            <Button
                android:text="parar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btparar"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/btFechar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btFecharPin"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                android:layout_gravity="bottom" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>